# Editia

./: .gitmodules  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h  edpch.h  log.cpp  log.h  main.cpp
src/ImGui/: ImGui.cpp  ImGui.h  ImGuiBuild.cpp  MenuBar.cpp  MenuBar.h
